// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a transparent main image if no file name is provided 1`] = `
<div
  className="root"
>
  <div
    className="carouselContainer"
  >
    <button
      className="previousButton"
      onClick={[Function]}
      type="button"
    >
      <span
        className="root"
      >
        <svg
          className="icon"
          fill="none"
          height={40}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={40}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="15 18 9 12 15 6"
          />
        </svg>
      </span>
    </button>
    <div
      className="root container"
    >
      <img
        alt="image-product"
        className="image placeholder"
        loading="eager"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
      />
      <img
        alt="image-product"
        className="image notLoaded"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
      />
    </div>
    <button
      className="nextButton"
      onClick={[Function]}
      type="button"
    >
      <span
        className="root"
      >
        <svg
          className="icon"
          fill="none"
          height={40}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={40}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    className="thumbnailList"
  />
</div>
`;

exports[`renders the Carousel component correctly w/ sorted images 1`] = `
<div
  className="root"
>
  <div
    className="carouselContainer"
  >
    <button
      className="previousButton"
      onClick={[Function]}
      type="button"
    >
      <span
        className="root"
      >
        <svg
          className="icon"
          fill="none"
          height={40}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={40}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="15 18 9 12 15 6"
          />
        </svg>
      </span>
    </button>
    <div
      className="root container"
    >
      <img
        alt="test-thumbnail1"
        className="image placeholder"
        loading="eager"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
        width={640}
      />
      <img
        alt="test-thumbnail1"
        className="image notLoaded"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        sizes="640px"
        src="/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=640&height=800&fit=cover"
        srcSet="/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=40&height=50&fit=cover 40w,
/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=80&height=100&fit=cover 80w,
/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=160&height=200&fit=cover 160w,
/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=320&height=400&fit=cover 320w,
/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=640&height=800&fit=cover 640w,
/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=960&height=1200&fit=cover 960w,
/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=1280&height=1600&fit=cover 1280w,
/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=1600&height=2000&fit=cover 1600w,
/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=2560&height=3200&fit=cover 2560w"
        width={640}
      />
    </div>
    <button
      className="nextButton"
      onClick={[Function]}
      type="button"
    >
      <span
        className="root"
      >
        <svg
          className="icon"
          fill="none"
          height={40}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={40}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    className="thumbnailList"
  >
    <button
      className="rootSelected"
      onClick={[Function]}
      type="button"
    >
      <div
        className="root container"
      >
        <img
          alt="test-thumbnail1"
          className="image placeholder"
          height={170}
          loading="eager"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
          width={135}
        />
        <img
          alt="test-thumbnail1"
          className="image notLoaded"
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          sizes="135px"
          src="/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=135&height=170&fit=cover"
          srcSet="/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=40&height=50&fit=cover 40w,
/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=80&height=100&fit=cover 80w,
/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=160&height=200&fit=cover 160w,
/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=320&height=400&fit=cover 320w,
/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=640&height=800&fit=cover 640w,
/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=960&height=1200&fit=cover 960w,
/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=1280&height=1600&fit=cover 1280w,
/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=1600&height=2000&fit=cover 1600w,
/media/catalog/product/thumbnail1.png?auto=webp&format=png&width=2560&height=3200&fit=cover 2560w"
          width={135}
        />
      </div>
    </button>
    <button
      className="root"
      onClick={[Function]}
      type="button"
    >
      <div
        className="root container"
      >
        <img
          alt="test-thumbnail2"
          className="image placeholder"
          height={170}
          loading="eager"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
          width={135}
        />
        <img
          alt="test-thumbnail2"
          className="image notLoaded"
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          sizes="135px"
          src="/media/catalog/product/thumbnail2.png?auto=webp&format=png&width=135&height=170&fit=cover"
          srcSet="/media/catalog/product/thumbnail2.png?auto=webp&format=png&width=40&height=50&fit=cover 40w,
/media/catalog/product/thumbnail2.png?auto=webp&format=png&width=80&height=100&fit=cover 80w,
/media/catalog/product/thumbnail2.png?auto=webp&format=png&width=160&height=200&fit=cover 160w,
/media/catalog/product/thumbnail2.png?auto=webp&format=png&width=320&height=400&fit=cover 320w,
/media/catalog/product/thumbnail2.png?auto=webp&format=png&width=640&height=800&fit=cover 640w,
/media/catalog/product/thumbnail2.png?auto=webp&format=png&width=960&height=1200&fit=cover 960w,
/media/catalog/product/thumbnail2.png?auto=webp&format=png&width=1280&height=1600&fit=cover 1280w,
/media/catalog/product/thumbnail2.png?auto=webp&format=png&width=1600&height=2000&fit=cover 1600w,
/media/catalog/product/thumbnail2.png?auto=webp&format=png&width=2560&height=3200&fit=cover 2560w"
          width={135}
        />
      </div>
    </button>
    <button
      className="root"
      onClick={[Function]}
      type="button"
    >
      <div
        className="root container"
      >
        <img
          alt="test-thumbnail3"
          className="image placeholder"
          height={170}
          loading="eager"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
          width={135}
        />
        <img
          alt="test-thumbnail3"
          className="image notLoaded"
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          sizes="135px"
          src="/media/catalog/product/thumbnail3.png?auto=webp&format=png&width=135&height=170&fit=cover"
          srcSet="/media/catalog/product/thumbnail3.png?auto=webp&format=png&width=40&height=50&fit=cover 40w,
/media/catalog/product/thumbnail3.png?auto=webp&format=png&width=80&height=100&fit=cover 80w,
/media/catalog/product/thumbnail3.png?auto=webp&format=png&width=160&height=200&fit=cover 160w,
/media/catalog/product/thumbnail3.png?auto=webp&format=png&width=320&height=400&fit=cover 320w,
/media/catalog/product/thumbnail3.png?auto=webp&format=png&width=640&height=800&fit=cover 640w,
/media/catalog/product/thumbnail3.png?auto=webp&format=png&width=960&height=1200&fit=cover 960w,
/media/catalog/product/thumbnail3.png?auto=webp&format=png&width=1280&height=1600&fit=cover 1280w,
/media/catalog/product/thumbnail3.png?auto=webp&format=png&width=1600&height=2000&fit=cover 1600w,
/media/catalog/product/thumbnail3.png?auto=webp&format=png&width=2560&height=3200&fit=cover 2560w"
          width={135}
        />
      </div>
    </button>
    <button
      className="root"
      onClick={[Function]}
      type="button"
    >
      <div
        className="root container"
      >
        <img
          alt="test-thumbnail4"
          className="image placeholder"
          height={170}
          loading="eager"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
          width={135}
        />
        <img
          alt="test-thumbnail4"
          className="image notLoaded"
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          sizes="135px"
          src="/media/catalog/product/thumbnail4.png?auto=webp&format=png&width=135&height=170&fit=cover"
          srcSet="/media/catalog/product/thumbnail4.png?auto=webp&format=png&width=40&height=50&fit=cover 40w,
/media/catalog/product/thumbnail4.png?auto=webp&format=png&width=80&height=100&fit=cover 80w,
/media/catalog/product/thumbnail4.png?auto=webp&format=png&width=160&height=200&fit=cover 160w,
/media/catalog/product/thumbnail4.png?auto=webp&format=png&width=320&height=400&fit=cover 320w,
/media/catalog/product/thumbnail4.png?auto=webp&format=png&width=640&height=800&fit=cover 640w,
/media/catalog/product/thumbnail4.png?auto=webp&format=png&width=960&height=1200&fit=cover 960w,
/media/catalog/product/thumbnail4.png?auto=webp&format=png&width=1280&height=1600&fit=cover 1280w,
/media/catalog/product/thumbnail4.png?auto=webp&format=png&width=1600&height=2000&fit=cover 1600w,
/media/catalog/product/thumbnail4.png?auto=webp&format=png&width=2560&height=3200&fit=cover 2560w"
          width={135}
        />
      </div>
    </button>
  </div>
</div>
`;
